# ID1217-Particle-Sim-Project

Particle-Sim-MPI/: CMakeLists.txt
Particle-Sim-MPI/src/: common.cpp  common.h  main.cpp
Particle-Sim-Openmp/: CMakeLists.txt
Particle-Sim-Openmp/src/: common.cpp  common.h  main.cpp  particlematrix.cpp  particlematrix.h
Particle-Sim-Pthreads/: CMakeLists.txt
Particle-Sim-Pthreads/src/: common.cpp  common.h  main.cpp  pthread.cpp  pthread.h
Particle-Simulation/: CMakeLists.txt
Particle-Simulation/src/: common.cpp  common.h  main.cpp  particlematrix.cpp  particlematrix.h
